# async-receiver

./: .gitignore  LICENSE  MANIFEST.in  README.md  black.sh  build.sh  clean.sh  flake8.ini  flake8.sh  install.dev.sh  isort.cfg  isort.sh  main.py  mypy.ini  mypy.sh  project.dic  pytest.ini  pytest.sh  python  requirements.deploy.txt  requirements.main.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py  twine.sh  uninstall.sh
.github/workflows/: python-deploy.yml  python-test.yml
async_receiver/: __init__.py  __main__.py  arguments.py  entrypoint.py
async_receiver/aio/: async_python_subprocess.py  async_subprocess.py  async_virtual_environment.py
async_receiver/logging/: colored_formatter.py  logging.py
async_receiver/module/: attributes.py
async_receiver/receiver/: receive_manager.py  receiver.py
async_receiver/subprocess/: async_python_subprocess.py  async_subprocess.py  async_virtual_environment.py
tester/: test_entrypoint.py
tester/aio/: test_async_python_subprocess.py  test_async_subprocess.py  test_async_virtual_environment.py
tester/subprocess/: test_async_python_subprocess.py  test_async_subprocess.py  test_async_virtual_environment.py
