[metadata]
name = async-receiver
description = Receive multiple types of data asynchronously
version = attr: async_receiver.__version__
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
url = https://github.com/osom8979/async-receiver
project_urls =
    GitHub: issues = https://github.com/osom8979/async-receiver/issues
    GitHub: repo = https://github.com/osom8979/async-receiver
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:

[options.packages.find]
exclude =
    tester*
